[gd_scene load_steps=7 format=2]

[ext_resource path="res://UserInterface/fonts/poppins_ui_text.tres" type="DynamicFont" id=1]
[ext_resource path="res://UserInterface/fonts/poppins_description_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://UserInterface/assets/portrait_default_flip.png" type="Texture" id=3]
[ext_resource path="res://UserInterface/EventHud/prefabs/EnemyInfoBox.gd" type="Script" id=4]
[ext_resource path="res://UserInterface/assets/ui_background_nineslice.png" type="Texture" id=6]
[ext_resource path="res://UserInterface/assets/UIGradientTexture.tres" type="Texture" id=7]

[node name="EnemyInfoBox" type="MarginContainer"]
margin_right = 236.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )
mouse_filter = 2
custom_constants/margin_right = 16
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 220.0
margin_bottom = 92.0
rect_min_size = Vector2( 160, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 220.0
margin_bottom = 92.0
mouse_filter = 0
texture = ExtResource( 6 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = 2.0
margin_right = 108.0
margin_bottom = 86.0
rect_rotation = -360.0
mouse_filter = 0
texture = ExtResource( 7 )
expand = true

[node name="InfoBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_right = 220.0
margin_bottom = 92.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="InfoBox"]
margin_right = 130.0
margin_bottom = 92.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="InfoBox/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 122.0
margin_bottom = 84.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="VBoxContainer" type="VBoxContainer" parent="InfoBox/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 122.0
margin_bottom = 84.0
mouse_filter = 2
custom_constants/separation = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="InfoBox/MarginContainer/VBoxContainer"]
margin_right = 114.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameValue" type="Label" parent="InfoBox/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 86.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Unknown"
align = 2
valign = 2

[node name="IndexValue" type="Label" parent="InfoBox/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 90.0
margin_right = 114.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = " (0) "
align = 1
valign = 2
uppercase = true

[node name="HBoxContainer3" type="HBoxContainer" parent="InfoBox/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 114.0
margin_bottom = 76.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="InfoBox/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 74.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Health"
align = 2

[node name="HealthValue" type="Label" parent="InfoBox/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 78.0
margin_right = 114.0
margin_bottom = 34.0
rect_min_size = Vector2( 36, 28 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = " 0/0 "
align = 1

[node name="MBox" type="MarginContainer" parent="InfoBox"]
margin_left = 134.0
margin_right = 220.0
margin_bottom = 92.0
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="PortraitTexture" type="TextureRect" parent="InfoBox/MBox"]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 4.0
margin_right = 78.0
margin_bottom = 84.0
rect_min_size = Vector2( 70, 80 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
